# fastapi-log-api-route

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml  ruff.toml
.github/workflows/: ci.yml  release.yml
src/fastapi_log_api_route/: __init__.py  route.py
tests/: test_log_api_route.py
